<resources>
    <string name="app_name">Калькулятор Ипотеки</string>
    <string name="MC" translatable="false">Расчёт ипотеки</string>
    <string name="priseEstate" translatable="false">Цена имущества</string>
    <string name="initialPayment" translatable="false">Первоначальный взнос</string>
    <string name="interestRate" translatable="false">Процентная ставка</string>
    <string name="term" translatable="false">Срок ипотеки</string>
    <string name="learn" translatable="false">Узнать</string>
    <string name="monthlyPayment" translatable="false">Ежемесячный платёж :</string>
    <string name="loanAmount" translatable="false">Сумма кредита :</string>
    <string name="requiredIncome" translatable="false">Необходимый доход :</string>
    <string name="amountOfInterest" translatable="false">Сумма переплаты :</string>
    <string name="noMore" translatable="false">Менее 1 Млрд. Р.</string>
    <string name="minInsert" translatable="false">Не менее 30 %</string>
    <string name="minInsertDebt" translatable="false">Не менее 0.1 %</string>
    <string name="termDebt" translatable="false">Не менее 1 года</string>

    <string name="priseEstateE" translatable="false">Цена имущества</string>
    <string name="initialPaymentE" translatable="false">Первоначальный взнос</string>
    <string name="interestRateE" translatable="false">Процентная ставка</string>
    <string name="termE" translatable="false">Срок ипотеки</string>
</resources>